frameworks/framework/layout.css
/* ... */
msItem > author {
    display: none; 
    /*content: 
    oxy_editor(type, text, edit, '#text', width, 30%)
 oxy_label(text, "                              language: en ")
 oxy_editor(type, button, actionID, delete_element, transparent, true, color, #FF0000)*/
}

msItem[*|id] > title[type = uniform] {
    display:none;
   /* content: 
    oxy_label(text, 'Compendium Historiae')
 oxy_label(text, "                   language: la")*/
}

msItem[*|id] > title[type = archival] {
    content: 
    oxy_label(text, 'Title (Archival):', styles, 'width:20%')
 oxy_editor(type, text, edit, "#text", width, 40%)
 oxy_label(text, " language: ")
 oxy_editor(type, combo, edit, '@xml:lang', editable, true, values, ',la,en,de,fr,it' width, 20%)
 oxy_editor(type, button, actionID, delete_element, transparent, true, color, #FF0000)
}
/*msItem[*|id] > textLang[mainLang] {
    content: 
    oxy_editor(type, combo, edit, '#text', editable, false, values, ',Latin,English,German,Greek,French, Alemannic', width, 40%)
 oxy_label(text, " language: ")
 oxy_editor(type, combo, edit, '@mainLang', editable, false, values, ',la,en,de,el,fr,al' width, 20%)
}*/

msItem > textLang[mainLang] {
    content: 
    oxy_editor(type, combo, edit, '#text', editable, false, values, ',Latin,English,German,Greek,French, Alemannic', width, 20%)
 oxy_label(text, " language: ")
 oxy_editor(type, combo, edit, '@mainLang', editable, false, values, ',la,en,de,el,fr,al' width, 10%)
 oxy_editor(type, button, actionID, delete_element, transparent, true, color, #FF0000)
}
msItem > textLang[otherLangs] {
    content: 
    oxy_editor(type, combo, edit, '#text', editable, false, values, ',Latin,English,German,Greek,French, Alemannic', width, 20%)
 oxy_label(text, " language: ")
 oxy_editor(type, combo, edit, '@otherLangs', editable, false, values, ',la,en,de,el,fr,al', width, 10%)
 oxy_editor(type, button, actionID, delete_element, transparent, true, color, #FF0000)
}
msItem > note[type = 'internal'] {
    content: 
    oxy_textArea(edit, '#text')
 oxy_editor(type, button, actionID, delete_element, transparent, true, color, #FF0000)
}
msItem > note[type = 'citation'] {
    content: 
    oxy_textArea(edit, '#text')
 oxy_editor(type, button, actionID, delete_element, transparent, true, color, #FF0000)
}
msItem[*|id] > note[type = 'version'] {
    content: 
    oxy_combobox(edit, '@n', editable, false, values, 'original,long,interpolated', labels, 'original version, long version, interpolated version', width, 40%)
}
msItem > note[type = 'version'] > p {
    font-style: italic;
    font-size: small;
    content: 
    oxy_label(text, 'Notes:  ')
 oxy_textArea(edit, '#text')
 oxy_editor(type, button, actionID, delete_element, transparent, true, color, #FF0000)
}

msItem[*|id] > note[type = 'extension'] {
    content: 
    oxy_combobox(edit, '@n', editable, false, values, 'yes,no,unknown', labels, 'extended to universal chronicle, not extended to universal chronicle, unknown', width, 40%)
}
msItem > note[type = 'extension'] > p {
    font-style: italic;
    font-size: small;
    content: 
    oxy_label(text, 'Notes:  ')
 oxy_textArea(edit, '#text')
 oxy_editor(type, button, actionID, delete_element, transparent, true, color, #FF0000)
}

msItem > note[type = 'significant-passages'] > list > item {
    display: block;
    font-style: italic;
    content: 
    oxy_label(text, '    ID: ', styles, 'font-weight:bold; font-style:normal;')
 oxy_editor(type, combo, edit, '@corresp', editable, false, values, oxy_xpath("string-join(doc('./../lists/Superstructure_List.xml')//list[@xml:id='texts']/item/concat( '#',@xml:id), ',')"), width, 15%)
 oxy_label(text, '   ')
 oxy_xpath("text()")
}

/*  ############################   Co-Transmissions and Transmission-Context ########################################### */

msItem[n = co-transmission] > title {
    padding: 5px;
    content: 
    oxy_editor(type, text, edit, "#text", width, 50%)
}

msItem[n = co-transmission] > locus {
    padding: 5px;
    content: 
    oxy_editor(type, text, edit, "#text", width, 10%)
 oxy_editor(type, button, actionID, delete_element, transparent, true, color, #FF0000)}

msItem[n = co-transmission] > note {
    margin-bottom: 20px;
    content: 
    oxy_textArea(edit, '#text')
 oxy_editor(type, button, actionID, delete_element, transparent, true, color, #FF0000)
}
msItem[n = transmission-context] > title {
    padding: 5px;
    content: 
    oxy_editor(type, text, edit, "#text", width, 50%)
}

msItem[n = transmission-context] > locus {
    padding: 5px;
    content: 
    oxy_editor(type, text, edit, "#text", width, 10%)
 oxy_editor(type, button, actionID, delete_element, transparent, true, color, #FF0000)
}

msItem[n = transmission-context] > note {
    padding: 5px;
    content: 
    oxy_textArea(edit, '#text')
 oxy_editor(type, button, actionID, delete_element, transparent, true, color, #FF0000)
}
/* ############################################   MATERIALITY ##############################################*/
objectDesc {
    padding-top: 10px;
    content: 
    oxy_label(text, 'Form:        ', styles, 'font-weight:bold;')
 oxy_editor(type, combo, edit, '@form', editable, false, values, 'codex, roll, fragment, roll-bound-into-codex, unknown', width, 10%);
}
supportDesc {
    padding-top: 10px;
    content: 
    oxy_label(text, 'Material:    ', styles, 'font-weight:bold;')
 oxy_editor(type, combo, edit, '@material', editable, false, values, 'paper,parchment,parchment-paper, paper-parchment, unknown' width, 10%);
}

supportDesc height {
    visibility: visible;
    margin-bottom: -1em;
    color: gray;
    content: 
    oxy_editor(type, text, edit, '#text', editable, true, width, 10%)
 oxy_label(text, ' (mm) ', styles, 'color:black;')
 oxy_editor(type, button, actionID, delete_element, transparent, true, color, #FFFFFF)
}
/* ... */

